syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "Dawn.Apps.RemoteControlHost";

package corsair;

service CorsairService 
{
  rpc GetAllKeyboardKeys(google.protobuf.Empty) returns (stream KeyboardStateMessage);
  
  rpc SetGlobal(ColorMessage) returns (google.protobuf.Empty);
  rpc ClearAll(google.protobuf.Empty) returns (google.protobuf.Empty);
  
  rpc SetKeys(stream SetKeyOptionsMessage) returns (google.protobuf.Empty);
  rpc ClearKeys(stream KeyboardKeysMessage) returns  (google.protobuf.Empty);
  
  rpc SetZones(stream SetZoneOptionsMessage) returns (google.protobuf.Empty);
  rpc ClearZones(KeyboardZonesMessage) returns (google.protobuf.Empty);
}

message SetZoneOptionsMessage
{
  ColorMessage Color = 1;
  KeyboardZonesMessage Zone = 2;
}

message KeyboardZonesMessage
{
  int32 Id = 1;
}

message KeyboardKeysMessage
{
  int32 Id = 1;
}

message SetKeyOptionsMessage
{
  repeated KeyboardKeysMessage Key = 1;
  ColorMessage Color = 2;
}


message KeyboardStateMessage
{
  KeyboardKeysMessage Key = 1;
  Vector2Message Coordinate = 2;
  ColorMessage Color = 3;  
}

message Vector2Message
{
  float X = 1;
  float Y = 2;
}
message ColorMessage
{
  int32 A = 1;
  int32 R = 2;
  int32 G = 3;
  int32 B = 4;
}